# fileupload_service

./: .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
src/fileupload_service/: __main__.py  app.py  errors.py  file_storage.py  schemas.py
src/fileupload_service/routers/: file_router.py
tests/: conftest.py  test_example.py  test_service.py
