[project]
name = "fileupload-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jolo-", email = "lockomoto@googlemail.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi[all]>=0.129.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]

[project.scripts]
fileupload-service = "fileupload_service:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff]
target-version = "py312"
line-length = 120
